@@ -1,0 +1,55 @@
+%define name    @PACKAGE@
+%define version @VERSION@
+%define release 1
+%define prefix  @prefix@
+
+Summary:	instrument editor for Gigasampler files
+Name:		%{name}
+Version:	%{version}
+Release:	%{release}
+Prefix:		%{prefix}
+License:	GPL
+Group:		Sound
+Source0:	%{name}-%{version}.tar.bz2
+URL:		http://www.linuxsampler.org
+BuildRoot:	/var/tmp/%{name}-%{version}-%{release}-buildroot
+
+%description
+instrument editor for Gigasampler files
+
+%prep
+
+%setup
+if [ -f Makefile.cvs ]; then make -f Makefile.cvs; fi
+
+%build
+./configure --prefix=%{prefix}
+make
+
+%install
+if [ -d $RPM_BUILD_ROOT ]; then rm -rf $RPM_BUILD_ROOT; fi
+mkdir -p $RPM_BUILD_ROOT
+make prefix=$RPM_BUILD_ROOT%{prefix} install
+
+%post
+/sbin/ldconfig
+
+%postun
+/sbin/ldconfig
+
+%clean
+if [ -d $RPM_BUILD_ROOT ]; then rm -rf $RPM_BUILD_ROOT; fi
+
+%files
+%defattr(-,root,root)
+%doc AUTHORS COPYING ChangeLog README NEWS
+%{prefix}/bin/*
+%{prefix}/lib/gigedit/libgigedit.*
+%{prefix}/lib/linuxsampler/plugins/libgigeditlinuxsamplerplugin.*
+%{prefix}/share/doc/gigedit/*
+%{prefix}/share/gigedit/*.xpm
+%{prefix}/share/locale/*
+
+%changelog
+* Sat Jan 10 2009 Christian Schoenebeck <cuse@users.sourceforge.net>
+- Created initial gigedit.spec (patch by Devin Anderson, slightly modified)
